--- a/Sat.Recruitment.Api/appsettings.json
+++ b/Sat.Recruitment.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RecruitmentConnection": "server=ARIELMG-HP\\SQLEXPRESS; database=Recruitment; Integrated Security = true; TrustServerCertificate=True;"
+    "RecruitmentConnection": "server=localhost\\SQLEXPRESS; database=Recruitment; Integrated Security = true; TrustServerCertificate=True;"
   }
 }
